# VoxelEngine

./: CMakeLists.txt
app/: main.cpp
cmake_modules/: cotire.cmake
src/: CMakeLists.txt  Game.cpp  Game.hpp  VoxelsEngine.cpp  VoxelsEngine.hpp
src/graphics/: Camera.cpp  Camera.hpp  InputManager.cpp  InputManager.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
src/graphics/gui/: imgui_impl_glfw_gl3.cpp
src/graphics/mesher/: IMesher.hpp  SimpleMesher.cpp  SimpleMesher.hpp
src/graphics/models/: Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
src/graphics/models/map/: MapGenerator.hpp  MapGeneratorHeightmap.cpp  MapGeneratorHeightmap.hpp
src/graphics/opengl/: ArrayBuffer.hpp  Buffer.hpp  Frustum.cpp  Frustum.hpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  OpenGLError.cpp  OpenGLError.hpp  Shader.cpp  Shader.hpp  Texture.hpp  TextureArray.cpp  TextureArray.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttribute.hpp
src/graphics/renderer/: ChunkRenderer.cpp  ChunkRenderer.hpp
src/graphics/shaders/: default.frag  default.vert
src/graphics/voxels/: Chunk.cpp  Chunk.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Renderer.cpp  Renderer.hpp  Voxel.cpp  Voxel.hpp  World.cpp  World.hpp
src/graphics/voxels/map/: MapGeneratorHeightmap.cpp
src/lib/glad/include/glad/: gl.h
src/lib/glad/src/: gl.c
src/lib/imgui/: CMakeLists.txt  imgui.h  imgui_demo.cpp
src/lib/libnoise/: CMakeLists.txt
src/lib/libnoise/src/: CMakeLists.txt
src/lib/optional/: optional.hpp
src/lib/stb_image-2.14/: CMakeLists.txt  stb_image.hpp
src/states/: IGameState.hpp  PlayState.cpp  PlayState.hpp
src/utils/: SimplexNoise.cpp  SimplexNoise.hpp
tests/: CMakeLists.txt
tests/voxels/: CMakeLists.txt
